--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="box2">
                 <div class="imgbox1">
-                    <img class="keyboard2" src="./assets/keyboard2.svg" alt="">
+                    <img class="keyboard2" src="./assets/keybosrd33.svg" alt="">
                     <img class="keb2" src="./assets/kb2.svg" alt="">
                     <img class="keyboard3" src="./assets/keyboard3.svg" alt="">
                     <img class="kb3" src="./assets/kb3.svg" alt="">
